5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1838_1273.log
== SUBMITION (2019-06-24 14:53:56) 
-- CODE:
from numpy import*
from numpy.linalg import
x= array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0], [1,0,0,1]])
v= array([50,-120,350,870])
v=v.T
h=dot(inv(x),v)
print(h)
-- EXECUTION TIME:
0.797937
-- ERROR:
  File "/home/codebench/codes/1838/1273/main.py", line 2
    from numpy.linalg import
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:54:30) 
-- CODE:
from numpy import*
from numpy.linalg import
x= array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0], [1,0,0,1]])
v= array([50,-120,350,870])
v=v.T
h=dot(inv(x),v)
print(h)
-- EXECUTION TIME:
0.713879
-- ERROR:
  File "/home/codebench/codes/1838/1273/main.py", line 2
    from numpy.linalg import
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:54:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

x= array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0], [1,0,0,1]])
v= array([50,-120,350,870])
v=v.T
h=dot(inv(x),v)

print(h)
-- EXECUTION TIME:
1.0908
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
